--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=SofBank
 server.port=8080 
+spring.application.version= 1.0.0
 # http://localhost:8080
 
 # H2 Configuracion  http://localhost:8080/h2-console
